# system_alert

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  RELEASE.md  ReadME.md  config.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-release.sh  github-release.sh  quick-release.sh  test-release.sh
src/: battery_collector.rs  cli.rs  config.rs  data_collector.rs  history.rs  lib.rs  main.rs  notification.rs  system_info.rs  types.rs  ui.rs
