[package]
name = "system-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
termion = "4.0.3"
sysinfo = "0.33.1"
libc = "0.2.169"
tui = { version = "0.19", default-features = false, features = ['termion'] }
lazy_static = "1.4.0"
regex = "1.11.1"
tokio ={ version = "1.43.0", features = ["full"] }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"